padding, margin を実装

--- a/html/div/index.html
+++ b/html/div/index.html
@@ -57,67 +57,67 @@
                         <input type="range" min="0" max="32" id="divSpacePaddingTop" value="0">
                     </div>
                 </div>
-                <div class="w-56 flex space-x-4 py-1">
-                    <div class="w-40">
+                <div class="flex space-x-3 py-1">
+                    <div class="w-36">
                         <span class="text-xl float-right">Padding (下) : </span>
                     </div>
-                    <div class="w-16">
-                        <input type="tel" name="divSpace" id="divSpacePaddingBottom"
-                            class="w-16 pl-0.5 border border-black">
+                    <div class="flex">
+                        <p class="w-16 text-xl" id="divSpacePaddingBottomValue">None</p>
+                        <input type="range" min="0" max="32" id="divSpacePaddingBottom" value="0">
                     </div>
                 </div>
-                <div class="w-56 flex space-x-4 py-1">
-                    <div class="w-40">
+                <div class="flex space-x-3 py-1">
+                    <div class="w-36">
                         <span class="text-xl float-right">Padding (右) : </span>
                     </div>
-                    <div class="w-16">
-                        <input type="tel" name="divSpace" id="divSpacePaddingRight"
-                            class="w-16 pl-0.5 border border-black">
+                    <div class="flex">
+                        <p class="w-16 text-xl" id="divSpacePaddingRightValue">None</p>
+                        <input type="range" min="0" max="32" id="divSpacePaddingRight" value="0">
                     </div>
                 </div>
-                <div class="w-56 flex space-x-4 py-1">
-                    <div class="w-40">
+                <div class="flex space-x-3 py-1">
+                    <div class="w-36">
                         <span class="text-xl float-right">Padding (左) : </span>
                     </div>
-                    <div class="w-16">
-                        <input type="tel" name="divSpace" id="divSpacePaddingLeft"
-                            class="w-16 pl-0.5 border border-black">
+                    <div class="flex">
+                        <p class="w-16 text-xl" id="divSpacePaddingLeftValue">None</p>
+                        <input type="range" min="0" max="32" id="divSpacePaddingLeft" value="0">
                     </div>
                 </div>
-                <div class="w-56 flex space-x-4 py-1">
-                    <div class="w-40">
+                <div class="flex space-x-3 py-1">
+                    <div class="w-36">
                         <span class="text-xl float-right">Margin (上) : </span>
                     </div>
-                    <div class="w-16">
-                        <input type="tel" name="divSpace" id="divSpaceMarginTop"
-                            class="w-16 pl-0.5 border border-black">
+                    <div class="flex">
+                        <p class="w-16 text-xl" id="divSpaceMarginTopValue">None</p>
+                        <input type="range" min="0" max="32" id="divSpaceMarginTop" value="0">
                     </div>
                 </div>
-                <div class="w-56 flex space-x-4 py-1">
-                    <div class="w-40">
+                <div class="flex space-x-3 py-1">
+                    <div class="w-36">
                         <span class="text-xl float-right">Margin (下) : </span>
                     </div>
-                    <div class="w-16">
-                        <input type="tel" name="divSpace" id="divSpaceMarginBottom"
-                            class="w-16 pl-0.5 border border-black">
+                    <div class="flex">
+                        <p class="w-16 text-xl" id="divSpaceMarginBottomValue">None</p>
+                        <input type="range" min="0" max="32" id="divSpaceMarginBottom" value="0">
                     </div>
                 </div>
-                <div class="w-56 flex space-x-4 py-1">
-                    <div class="w-40">
+                <div class="flex space-x-3 py-1">
+                    <div class="w-36">
                         <span class="text-xl float-right">Margin (右) : </span>
                     </div>
-                    <div class="w-16">
-                        <input type="tel" name="divSpace" id="divSpaceMarginRight"
-                            class="w-16 pl-0.5 border border-black">
+                    <div class="flex">
+                        <p class="w-16 text-xl" id="divSpaceMarginRightValue">None</p>
+                        <input type="range" min="0" max="32" id="divSpaceMarginRight" value="0">
                     </div>
                 </div>
-                <div class="w-56 flex space-x-4 py-1">
-                    <div class="w-40">
+                <div class="flex space-x-3 py-1">
+                    <div class="w-36">
                         <span class="text-xl float-right">Margin (左) : </span>
                     </div>
-                    <div class="w-16">
-                        <input type="tel" name="divSpace" id="divSpaceMarginLeft"
-                            class="w-16 pl-0.5 border border-black">
+                    <div class="flex">
+                        <p class="w-16 text-xl" id="divSpaceMarginLeftValue">None</p>
+                        <input type="range" min="0" max="32" id="divSpaceMarginLeft" value="0">
                     </div>
                 </div>
             </div>
