[update] コピーボタンを(見た目だけ)いい感じにした

--- a/html/textTools/index.html
+++ b/html/textTools/index.html
@@ -250,7 +250,8 @@
             <div class="h-1/2 flex flex-col mb-8">
                 <div class="flex justify-between place-items-center">
                     <h3 class="text-3xl font-mono font-semibold">Code</h3>
-                    <button class="border-2 rounded-full px-2 py-1 m-1">コードをコピー</button>
+                    <button
+                        class="border-2 rounded-full border-slate-300 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 px-2 py-1 m-1">コードをコピー</button>
                 </div>
                 <div class="flex-auto my-1 ml-4 border-2 rounded-lg border-slate-300 p-4" id="codeBlock">ここはコード領域</div>
             </div>
