--- a/html/divTools/index.html
+++ b/html/divTools/index.html
@@ -11,26 +11,23 @@
 </head>
 
 <body>
-    <header class="flex h-16 text-slate-900 bg-slate-100 border-b border-slate-200">
+    <header class="sticky top-0 flex h-16 text-slate-900 bg-slate-100 border-b border-slate-200">
         <a href="../../index.html" class="flex text-xl place-items-center">
-            <img src="../../img/icon.png" class="h-12 mx-4">
+            <img src="../../img/icon.svg" class="h-8 mx-4">
             <span class="mx-2">TailwindCSS Development Support Tools</span>
         </a>
         <div class="flex place-items-center text-lg">
-            <a href="../use-devtools/index.html"
+            <a href="../usage/index.html"
                 class="px-3 py-1 m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 rounded-full border-solid">Usage</a>
-            <a href="../div/index.html"
-                class="px-3 py-1 m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 rounded-full border-solid">div
-                tag</a>
-            <span href="../p/index.html"
-                class="px-3 py-1 m-2 border-2 border-slate-800 bg-slate-800 text-slate-100 rounded-full border-solid">p
-                tag</span>
-            <a href="../span/index.html"
-                class="px-3 py-1 m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 rounded-full border-solid">span
-                tag</a>
-            <a href="../img/index.html"
-                class="px-3 py-1 m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 rounded-full border-solid">img
-                tag</a>
+            <span
+                class="px-3 py-1 m-2 border-2 border-slate-800 bg-slate-800 text-slate-100 rounded-full border-solid">Div
+                Tools</span>
+            <a href="../textTools/index.html" 
+                class="px-3 py-1 m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 rounded-full border-solid">Text
+                Tools</a>
+            <a href="../imgTools/index.html"
+                class="px-3 py-1 m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 rounded-full border-solid">Image
+                Tools</a>
         </div>
     </header>
 
