スライダーCSSの削除

--- a/html/divTools/index.html
+++ b/html/divTools/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <title>Tailwind CSS DevTools</title>
     <link rel="icon" type="image/png" href="../../img/icon.png">
-    <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/slider.css">
+    <link rel="stylesheet" href="../../css/divTools.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
